--- a/index.html
+++ b/index.html
@@ -16,15 +16,19 @@
 			<li><img src="kwlogo.png" id="kwlogo"></li>
 		</ul>
 	</flexbox>
-	<p><span>My name is Jennifer Diaz and I am a realtor with Keller Williams Heritage.</span> I have recently sold multiple properties in your neighborhood. I welcome the opportunity to meet with you and go over any real estate needs and update you on the current market for your area. Together we can create a plan, whether you are interested in buying or selling. In this ever-changing market, you need an experienced Realtor who can get your home sold for full market value and in a reasonable amount of time.<br>
+	<p><span>My name is Jennifer Diaz and I am a realtor with Keller Williams Heritage.</span> I have recently sold multiple properties in your neighborhood. I welcome the opportunity to meet with you and go over any real estate needs and update you on the current market for your area. Together we can create a plan, whether you are interested in buying or selling. In this ever-changing market, you need an experienced Realtor who can get your home sold for full market value and in a reasonable amount of time.</p><br>
 
-	<ul>
-		<li>I promise to talk to you personally during the buying or selling period, at least twice a week with updates.</li>
-		<li>I promise to answer my phone when you call or return your call within 30 minutes. <span>Try it! (210)324-5571</span></li></p>
+	<p>I promise to talk to you personally during the buying or selling period, at least twice a week with updates. I promise to answer my phone when you call or return your call within 30 minutes. Try it! <a href="tel:210-324-5571">210.324.5571</a></p><br>
+
+	<p><span>Also check out my website at <a href="https://jenniferdiaz.kw.com/" target="_blank">JenniferDiaz.KW.com</a></span><br><br>
+
+	If you're serious about buying a home or selling your home, call me today. I look forward to hearing from you.<br><br>
+
+	Best-<br>
+	Jennifer Diaz</p>
 	<footer>
 		<img src="businesscard.png" id="businesscard">
 		<div>
-			<p>this is where the script goes</p>
 		</div>
 	</footer>
 	</body>
