--- a/front.html
+++ b/front.html
@@ -8,14 +8,13 @@
 	<body>
 	<header>
 		<h1>Just Sold!</h1><h2>12345 Main Street</h2>
-		<img src="house.png" id="house">
 	</header>
-	<flexbox id="greyribbon">
+	<img src="house.png" id="house">
+	<flexbox id="frontbottom">
 		<ul>
 			<li><h3>Jennifer Diaz | 210.324.5571</h3></li>
 			<li><img src="kwlogo.png" id="kwlogo"></li>
 		</ul>
 	</flexbox>
-
 	</body>
 </html>
