--- a/back.html
+++ b/back.html
@@ -10,10 +10,11 @@
             box-sizing: border-box;
           }
         body {
-            width: 6in;
-            height: 4.25in;
+            max-width: 6.25in;
+            max-height: 4.5in;
             margin: 0;
             padding: 0;
+            border:solid 1px black;
         }
         #type {
           margin:.25in;
@@ -37,14 +38,14 @@
         #businesscard {
           width:50%;
           margin:auto;
-          margin-top:-.72in;
+          margin-top:-.4in;
         }
         #script {
           background:#e06663;
           width:50%;
           float:right;
-          height:1.25in;
-          margin-top:-.18in;
+          height:1.3in;
+          margin-top:.2in;
         }
       </style>
     </head>
