--- a/back.html
+++ b/back.html
@@ -10,8 +10,8 @@
             box-sizing: border-box;
           }
         body {
-            max-width: 6.25in;
-            max-height: 4.5in;
+           width: 6in;
+           height: 4.25in;
             margin: 0;
             padding: 0;
         }
@@ -39,26 +39,21 @@
           margin:auto;
           margin-top:-.4in;
         }
-        #script {
-          background:#e06663;
-          width:50%;
-          float:right;
-          height:1.3in;
-          margin-top:.2in;
-        }
       </style>
     </head>
     <body>
-      <div id="type"><p>My name is Jennifer Diaz and I am a realtor with Keller Williams Heritage. I have recently sold multiple properties in your neighborhood. I welcome the opportunity to meet with you and go over any real estate needs and update you on the current market for your area. Together we can create a plan, whether you are interested in buying or selling. In this ever-changing market, you need an experienced Realtor who can get your home sold for full market value and in a reasonable amount of time.</p>
-      <p>I promise to talk to you personally during the buying or selling period, at least twice a week with updates. I promise to answer my phone when you call or return your call within 30 minutes. Try it! <span>210.324.5571</span> Also check out my website at <span>JenniferDiaz.KW.com</span></p>
+      <div id="type"><p>My name is Jennifer Diaz and I am a realtor with Keller Williams Heritage.
+I have recently sold multiple properties in your neighborhood. I welcome the opportunity to meet with you and go over any real estate needs and update you on the current market for your area.
+Together we can create a plan, whether you are interested in buying or selling.
+In this ever-changing market, you need an experienced Realtor who can get your home sold for full market value and in a reasonable amount of time.</p>
+      <p>I promise to talk to you personally during the buying or selling period, at least twice a week with updates. I promise to answer my phone when you call or return your call within 30 minutes.
+Try it! <span>210.324.5571</span> Also check out my website at <span>JenniferDiaz.KW.com</span></p>
       <p>If you're serious about buying a home or selling your home, call me today. I look forward to hearing from you.</p>
       <h4>Best -<br>
       Jennifer Diaz</h4>
       </div>
-      <footer>
-        <img src="businesscard.png" id="businesscard">
-        <div id=script>
-        </div>
-      </footer>
+    <div>
+<img src="businesscard.png" id="businesscard">
+</div>
     </body>
 </html>
