--- a/back.html
+++ b/back.html
@@ -1,59 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-      <title>Jennifer Diaz - KWHeritage</title>
-      <meta charset="utf-8">
-      <style>
-          *, *:before, *:after {
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-          }
-        body {
-           width: 6in;
-           height: 4.25in;
-            margin: 0;
-            padding: 0;
-        }
-        #type {
-          margin:.25in;
-        }
-        p {
-          text-indent:20px;
-          font-family:sans-serif;
-          width:100%;
-          margin:auto;
-          margin-bottom:6px;
-          font-size:10pt;
-          text-align:justify;
-          justify-content:center;
-        }
-        h4 {font-family:sans-serif;font-size:10pt;margin-left:4in;}
-        span {
-          text-decoration:none;
-          color:darkred;
-          font-weight:600;
-        }
-        #businesscard {
-          width:50%;
-          margin:auto;
-          margin-top:-.4in;
-        }
-      </style>
-    </head>
-    <body>
-      <div id="type"><p>My name is Jennifer Diaz and I am a realtor with Keller Williams Heritage.
-I have recently sold multiple properties in your neighborhood. I welcome the opportunity to meet with you and go over any real estate needs and update you on the current market for your area.
-Together we can create a plan, whether you are interested in buying or selling.
-In this ever-changing market, you need an experienced Realtor who can get your home sold for full market value and in a reasonable amount of time.</p>
-      <p>I promise to talk to you personally during the buying or selling period, at least twice a week with updates. I promise to answer my phone when you call or return your call within 30 minutes.
-Try it! <span>210.324.5571</span> Also check out my website at <span>JenniferDiaz.KW.com</span></p>
-      <p>If you're serious about buying a home or selling your home, call me today. I look forward to hearing from you.</p>
-      <h4>Best -<br>
-      Jennifer Diaz</h4>
-      </div>
-    <div>
-<img src="businesscard.png" id="businesscard">
-</div>
-    </body>
+	<head>
+		<title>Jennifer Diaz - KWHeritage</title>
+		<meta charset="utf-8">
+		<style>			
+			
+			*, *:before, *:after {
+			    -webkit-box-sizing: border-box;
+			    -moz-box-sizing: border-box;
+			    box-sizing: border-box;
+			}
+			
+			body {
+			    width: 6.25in;
+			    height: 4.5in;
+			    margin: 0;
+			    padding: 0;
+			}
+			
+			header {
+				background:#a21221;
+				height:.75in;
+				display:flex;
+				justify-content:space-between;
+				align-items:center;
+			}
+			
+			h1 {color:white;
+				font-family:sans-serif;
+				font-size:26pt;
+				line-height:18pt;
+				margin-left:50px;}
+			
+			h2 {color:white;
+				font-family:sans-serif;
+				font-size:16pt;
+				margin-right:25px;}
+			
+			section {
+				width:100%;
+			}
+
+
+			#bottom {
+				display:flex;
+				align-items:center;
+				position:relative;
+				margin-top:-20px;
+				background:#e3e3e3;
+				height:60px;
+			}
+
+			h3 {
+				font-family:sans-serif;
+				font-size:14pt;
+				white-space:nowrap;
+				margin-left:25px;
+			}
+			
+			div img {
+				width:45%;
+				margin-left:95px;
+			}
+		
+		</style>
+	
+	</head>
+	
+	<body>
+	
+		<header>
+			<h1>Just Sold!</h1><h2>12345 Main Street</h2>
+		</header>
+		
+		<section>
+
+			<!--This is the url to replace when you want to change the house image!-->
+
+			<a href="https://lh3.googleusercontent.com/OMNVF_z9seXk9_CBJnkYjaGVOC8JEd68U7lMSfeogHe43oGOFTc1oLY90ZdKpUffI1JdxvHUyzmyABLLPkIDCNmb-J0LhU2XJ5JxjGwMGKm9OYYwcZ4p70_jovO8nPK6uLT_uVFVdA=w2400?source=screenshot.guru"><img src="https://lh3.googleusercontent.com/OMNVF_z9seXk9_CBJnkYjaGVOC8JEd68U7lMSfeogHe43oGOFTc1oLY90ZdKpUffI1JdxvHUyzmyABLLPkIDCNmb-J0LhU2XJ5JxjGwMGKm9OYYwcZ4p70_jovO8nPK6uLT_uVFVdA=w600-h315-p-k" /></a>
+		
+		</section>
+
+		<section>
+
+			<div id="bottom">
+				
+				<div><h3>Jennifer Diaz | 210.324.5571</h3></div>
+				
+				<div><a href="https://lh3.googleusercontent.com/2dN26f7YHHNyY-XF2iTep1WIfNKRo4XlrXB7skopCwY9F1x1WBh9A6G0G-thzcmri6sU4Cc_xmmyRRyjlFkTN45V3irEAEncunowsh5Oni2gEcRLFAeYRXLvkJg4B-NyebNBua-Upw=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/2dN26f7YHHNyY-XF2iTep1WIfNKRo4XlrXB7skopCwY9F1x1WBh9A6G0G-thzcmri6sU4Cc_xmmyRRyjlFkTN45V3irEAEncunowsh5Oni2gEcRLFAeYRXLvkJg4B-NyebNBua-Upw=w400-h150-p-k" /> </a></div>
+
+			</div>
+		
+		</section>
+
+	</body>
+
 </html>
